# dt

./: .gitignore  .tool-versions  CNAME  Cargo.toml  DEVELOPING.md  LICENSE  README  README.md  aqua.yaml  build  build.rs  build.sh  build.zig  build.zig.zon  default.nix  dt  dtsh  flake.nix  gen-docs.dt  greet.txt  hello.txt  index.html  rail  rail.cabal  railc  rock  stdlib.html  style.css  test.bats  user-guide
.github/: FUNDING.yml
.github/workflows/: compile.yml  deploy.yml  flakehub-publish-tagged.yml  main.yml  publish-nix-flake.yml  release.yml
archive/: stdlib-0.10.0.html  stdlib-0.11.0.html  stdlib-0.11.1.html  stdlib-0.11.2.html  stdlib-0.5.0.html  stdlib-0.5.1.html  stdlib-0.5.2.html  stdlib-0.5.3.html  stdlib-0.6.0.html  stdlib-0.7.0.html  stdlib-0.8.0.html  stdlib-0.9.0.html  stdlib-1.0.0.html  stdlib-1.0.1.html  stdlib-1.1.0.html  stdlib-1.1.1.html  stdlib-1.1.2.html  stdlib-1.2.0.html  stdlib-1.2.5.html
concept/: concatenative-resources.md  ideas.md  todo.md
demos/: beer.dt  fib.dt  http-echo-server  joy-combinators.dt  red-green.dt  shell.dt  tee.dt  世界を挨拶.dt
demos/dtutils/: README.md  false  head  true  yes
dev/: README.md  dt
dt-src/: extras.txt
dt-src/alien/: factorisms.dt  forthisms.dt
dt-src/misc/: incubating.dt
dt-src/stdlib/: 0_bootstrap-def.dt  1_bootstrap-rail-builtins.dt  all.txt  bool.dt  choice.dt  command.dt  display.dt  math.dt  reflect.dt  repeat.dt  sequence.dt  string.dt
etc/emails/: Re dt and Red Green quotes 2022-10-26T17_43_07+00 00.eml
etc/quotes/: quotes.md
img/: preview.xcf
libs/: all-libs.txt
mdbook/user-guide/: book.toml
meta/: ideas.md  quotes.md
meta/emails/: Re dt and Red Green quotes 2022-10-26T12_49_51+00 00.eml  Re dt and Red Green quotes 2022-10-26T15_38_21+00 00.eml  dt and Red Green quotes 2022-10-26T09_00_08+00 00.eml
old-rust-tests/: Cargo.toml
old-rust-tests/tests/: bool_tests.rs  def_scope_tests.rs  dt_args_basic.rs  dt_test_utils.rs  dtsh_interactive_basic.rs  project_euler_tests.rs
rail-src/: dev.txt  extras.txt
rail-src/alien/: factorisms.rail  forthisms.rail
rail-src/misc/: incubating.rail
rail-src/stdlib/: all.txt  bool.rail  choice.rail  command.rail  display.rail  function.rail  math.rail  reflect.rail  repeat.rail  sequence.rail  shuffle.rail  string.rail
src/: Main.hs  builtins.zig  cli.rs  corelib.rs  dt.dt  dt_machine.rs  inspiration  interpret.zig  lib.rs  loading.rs  main.rs  main.zig  prompt.rs  rail_machine.rs  stdlib.dt  stdlib.rock  string.zig  tokens.rs  tokens.zig  types.zig
src/corelib/: bool.rs  choice.rs  command.rs  display.rs  filesystem.rs  function.rs  interact.rs  math.rs  meta.rs  process.rs  reflect.rs  repeat.rs  sequence.rs  shuffle.rs  stab.rs  stack.rs  string.rs  test.rs
src/prompt/: rustyline_helper.rs
src/rail/: cli.zig
src/test/: hello.rock
src/tests/: bool_tests.zig  def_scope_tests.zig  dt_args_basic.zig  (+4 more)
stdlib/: all.txt  forthisms.rail  function.rail  incubating.rail  math.rail  reflect.rail  string.rail
tests/: basic.rail  bool_tests.rs  def_scope_tests.rs  dt_args_basic.rs  dt_test_utils.rs  dtsh_interactive_basic.rs  dtsh_run_basic.rs  euler_tests.rs  interpreter_basic.rs  project_euler_tests.rs  rail_args_basic.rs  rail_runner.rs  railsh_interactive_basic.rs  railsh_run_basic.rs  runner_basic.rs
zig-impl/: .tool-versions
(+40 files in other folders)
