[package]
name = "rail-lang"
version = "0.12.2"
authors = ["J.R. Hill <hiljusti@so.dang.cool>"]
description = "A straightforward programming language. Rail is currently experimental and subject to drastic breaking changes."
license = "GPL-2.0-only"

readme = "README.md"
homepage = "https://github.com/hiljusti/rail"
repository = "https://github.com/hiljusti/rail"
#documentation = "TODO"
keywords = ["programming-language", "concatenative", "interpreter", "parser"]
categories = []

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = [ "derive" ] }
clearscreen = "1.0"
colored = "2.0"
regex = "1.5"
rustyline = "9.1.2"
