[package]
name = "dt-tool"
version = "0.1.0"
authors = ["J.R. Hill <hiljusti@so.dang.cool>"]
description = "dt - it's duck tape for your unix pipes"
license = "GPL-2.0-only"

readme = "README.md"
homepage = "https://github.com/hiljusti/dt"
repository = "https://github.com/hiljusti/dt"
#documentation = "TODO"
keywords = ["programming-language", "concatenative", "interpreter", "parser"]
categories = []

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = { version = "3.2", features = [ "derive" ] }
clearscreen = "1.0"
colored = "2.0"
im = "15.1"
regex = "1.5"
rustyline = "10.0"
