[package]
name = "dt-tool"
version = "0.5.3"
authors = ["J.R. Hill <hiljusti@so.dang.cool>"]
description = "dt - it's duck tape for your unix pipes"
license = "GPL-2.0-only"

readme = "README.md"
homepage = "https://github.com/hiljusti/dt"
repository = "https://github.com/hiljusti/dt"
#documentation = "TODO"
keywords = ["programming-language", "concatenative", "interpreter", "parser"]
categories = []

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = { version = "3.2", features = [ "derive" ] }
rail-lang = "0.25.1"
