name:                rail
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hiljusti/rail#readme
license:             BSD3
license-file:        LICENSE
author:              J.R. Hill
maintainer:          hiljusti@so.dang.cool
copyright:           Copyright 2022 J.R. Hill
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rail
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
