[package]
name = "dt-tests"
version = "0.1.0"
authors = ["J.R. Hill <justin@so.dang.cool>"]
description = "dt - it's duck tape for your unix pipes"
license = "BSD-3-Clause"

readme = "README.md"
homepage = "https://github.com/booniepepper/dt"
repository = "https://github.com/booniepepper/dt"
keywords = ["programming-language", "concatenative", "interpreter", "parser"]
categories = []

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
